<resources>
    <string name="app_name">PlanIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="calendar">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Who">Who</string>
    <string name="What">What</string>
    <string name="When">When</string>
    <string name="Where">Where</string>
    <string name="Why">Why</string>
    <string name="ButtonAdd">Add</string>
    <string name="ButtonCancel">Cancel</string>
    <string name="Voice_Recognition">Voice Recognition</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Yearly">Yearly</string>
    <string name="Manage_Events">Manage Events</string>
    <string name="Manage_Days">Manage Days</string>
</resources>
