<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventForm"
    tools:showIn="@layout/eventformlayout"
    android:id="@+id/content_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollEventForm">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventForm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Who"
        android:id="@+id/whoText"
        android:layout_marginStart="37dp"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whoedit"
        android:layout_below="@+id/whoText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/What"
        android:id="@+id/whatText"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/whoedit"
        android:layout_alignStart="@+id/whoText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whatedit"
        android:layout_below="@+id/whatText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/When"
        android:id="@+id/whenText"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/whatedit"
        android:layout_alignStart="@+id/whatText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whenedit"
        android:layout_below="@+id/whenText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Where"
        android:id="@+id/whereText"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/whenedit"
        android:layout_alignStart="@+id/whenText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whereedit"
        android:layout_below="@+id/whereText"
        android:layout_alignParentStart="true" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/eventForm"
        android:layout_alignParentBottom="true"
        android:id="@+id/addCancelButton">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonAdd"
            android:id="@+id/addButton"
            android:layout_marginStart="107dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonCancel"
            android:id="@+id/cancelButton"
            android:layout_alignTop="@+id/addButton"
            android:layout_toEndOf="@+id/addButton"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Voice_btn"
            android:layout_alignParentStart="true"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/Voice_Recognition" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>